--- a/.gitignore
+++ b/.gitignore
@@ -3,28 +3,32 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
 # Dependency directories
-node_modules
+node_modules/
 
-# Build directories
-dist
-dist-ssr
-
-# Local environment files
-*.local
+# Environment variables
 .env
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+# Build files
+dist/
+build/
+
+# Debug logs
+*.pid
+*.seed
+*.pid.lock
+
+# IDE/editor settings
+.vscode/
+.idea/
 *.sw?
+
+# System files
+.DS_Store
+Thumbs.db
+
+# OS-specific files
+*.bak
+*.tmp
